tests/NormalTests/paczka1/fuzzy1/94415569.err
Error in line 1: u5xqq763tqB S43 82,6
Error in line 4: u5xqq763tqB A252 14,8
Error in line 5: u5xqq763tqB S284 29,2
Error in line 9: 3ZqoaR9GB S284 64,0
Error in line 6: u5xqq763tqB S43 61,5
Error in line 14: u5xqq763tqB A252 47,27
Error in line 13: u5xqq763tqB A252 49,0
Error in line 15: A252 A252 31,5
Error in line 16: u5xqq763tqB S43 50,3
Error in line 19: u5xqq763tqB A252 9,3
Error in line 29: 4yf3SE S284 77,1
